--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)\.html$ /$1 [L,R=301]
 
 # Redirect root to home.html
-RewriteRule ^$ /home.html [L,R=301]
+RewriteRule ^$ /home [L,R=301]
 
 DirectoryIndex home.html
